--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -58,14 +59,13 @@
         </div>
 
         <div class="generated-content" id="generated-content">
-
+          
         </div>
       </div>
     </div>
   </main>
 
   <script src="script.js"></script>
-  <script src="auth.js"></script>
 </body>
 
 </html>
