--- a/pages/main/main.html
+++ b/pages/main/main.html
@@ -36,8 +36,8 @@
             </div>
 
             <div class="qr-codes">
-                <div class="qr-block"><img src="qrcod_5Tus.png" alt=""> Сайт </div>
-                <div class="qr-block"> <img src="qrcod_5Tus.png" alt=""> Моб.Приложение </div>
+                <div class="qr-block"> <img src="qrcode_web.png" alt=""> Сайт </div>
+                <div class="qr-block"> <img src="qrcode_mobile.png" alt=""> Моб.Приложение </div>
                 <div class="qr-block"> <img src="qrcod_tg_bot.png" alt=""> Наш бот </div>
             </div>
 
@@ -57,7 +57,7 @@
             </div>
             
             <div class="type_here">
-                <button><span>Жми и пробуй</span></button>
+               <a style="width: fit-content;"  href="../../index.html"><button href="../../index.html"><span>Жми и пробуй</span></button></a>
             </div>
         </div>
     </main>
